# cuSZp2

./: README.md
0-main-results/examples/: CMakeLists.txt
0-main-results/src/: GSZ_entry.cu
3-drawing-scripts/rel-1e-2-com/: rel-1e-2-compress.eps
3-drawing-scripts/rel-1e-2-dec/: rel-1e-2-decompress.eps
3-drawing-scripts/rel-1e-3-com/: rel-1e-3-compress.eps
3-drawing-scripts/rel-1e-3-dec/: rel-1e-3-decompress.eps
3-drawing-scripts/rel-1e-4-com/: rel-1e-4-compress.eps
3-drawing-scripts/rel-1e-4-dec/: rel-1e-4-decompress.eps
examples/: example_cpu_api.cpp  example_gpu_api.cpp
include/: GSZ_entry.h
main-results/: CMakeLists.txt
main-results/src/: GSZ.cu
